WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11656
Fix Windows build
https://bugs.webkit.org/show_bug.cgi?id=11656
Summary
Fix Windows build
Sam Weinig
Reported
2006-11-20 09:26:15 PST
Patch to update code forthcoming.
Attachments
patch
(31.24 KB, patch)
2006-11-20 09:29 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
updated patch
(11.79 KB, patch)
2006-11-20 10:32 PST
,
Sam Weinig
dgibson77
: review-
Details
Formatted Diff
Diff
patch 3
(14.90 KB, patch)
2006-11-20 10:54 PST
,
Sam Weinig
dgibson77
: review+
Details
Formatted Diff
Diff
patch the forth
(14.89 KB, patch)
2006-11-20 12:03 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2006-11-20 09:29:30 PST
Created
attachment 11582
[details]
patch
Sam Weinig
Comment 2
2006-11-20 10:32:50 PST
Created
attachment 11583
[details]
updated patch Updated patch. Now uses correct line ending for .vcproj file.
Alexey Proskuryakov
Comment 3
2006-11-20 10:37:06 PST
Comment on
attachment 11583
[details]
updated patch r=me
Don Gibson
Comment 4
2006-11-20 10:39:10 PST
Comment on
attachment 11583
[details]
updated patch Make sure to change the include directories in both debug and release sections, or there will be weird issues down the road. Otherwise looks good.
Sam Weinig
Comment 5
2006-11-20 10:54:07 PST
Created
attachment 11585
[details]
patch 3 Fixed.
Don Gibson
Comment 6
2006-11-20 11:27:57 PST
Comment on
attachment 11585
[details]
patch 3 Nit: The "release" #include dir change line is indented using spaces instead of tabs. Fix to use tabs like the debug one does (.vcprojs use tabs). With that fixed, r=me
Sam Weinig
Comment 7
2006-11-20 12:03:04 PST
Created
attachment 11586
[details]
patch the forth fixed tabs
Mark Rowe (bdash)
Comment 8
2006-11-20 12:08:25 PST
Landed in
r17861
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug