WebCore/bridge/win/EditorClientWin.h
@@ -25,8 +25,8 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef EditorClientWin_H
-#define EditorClientWin_H
+#ifndef EditorClientWin_h
+#define EditorClientWin_h
 
 #include "EditorClient.h"
 
@@ -51,6 +51,7 @@ namespace WebCore {
 
         virtual bool shouldBeginEditing(Range*);
         virtual bool shouldEndEditing(Range*);
+        virtual bool shouldInsertText(String, Range*, EditorInsertAction);
         virtual bool shouldApplyStyle(CSSStyleDeclaration*, Range*);
 
         virtual void didBeginEditing();
@@ -68,6 +69,6 @@ namespace WebCore {
         virtual void redo();
     };
 
-}
+} // namespace WebCore
 
-#endif // EditorClientWin_H
+#endif // EditorClientWin_h
