WebCore/bridge/win/FrameWin.h
@@ -24,8 +24,8 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-#ifndef FrameWin_H
-#define FrameWin_H
+#ifndef FrameWin_h
+#define FrameWin_h
 
 #include "Frame.h"
 
@@ -74,6 +74,8 @@ namespace WebCore {
 
         virtual String mimeTypeForFileName(const String&) const;
 
+        virtual void ignoreSpelling();
+        virtual void learnSpelling();
         virtual void markMisspellingsInAdjacentWords(const VisiblePosition&);
         virtual void markMisspellings(const Selection&);
 
@@ -113,6 +115,7 @@ namespace WebCore {
 
     private:
         virtual bool passMouseDownEventToWidget(Widget*);
+
         FrameWinClient* m_client;
     };
 
@@ -121,4 +124,4 @@ namespace WebCore {
 
 } // namespace WebCore
 
-#endif
+#endif // FrameWin_h
